feat: add email verification
